--- a/starter-code/styles/modules.css
+++ b/starter-code/styles/modules.css
@@ -9,6 +9,10 @@
 }
 
 /* TODO: Add styles for the icon-menu class. It should be bigger, and off to the right. */
+.icon-menu {
+  float:right;
+  font-size: 3em;
+}
 
 .main-nav {
   padding: 0.1em;
