--- a/starter-code/styles/modules.css
+++ b/starter-code/styles/modules.css
@@ -59,3 +59,15 @@
          - Main should be all on one row, with padding spaced better for a larger screen.
          - Just, ya know, try to make it look good! */
 /* @media only screen... */
+@media only screen and (min-width: 768px) {
+  .icon-menu {
+    display: none;
+  }
+  .main-nav ul {
+    display: inline-block;
+  }
+  .main-nav li {
+    display: inline;
+    padding: 0 1.5em;
+  }
+}
